--- a/task-manager/src/app/views/tasks/tasks.component.html
+++ b/task-manager/src/app/views/tasks/tasks.component.html
@@ -1,1 +1,6 @@
-<app-task-grid></app-task-grid>
+<div class="wrapper">
+    <app-task-filter class="taskFilter"></app-task-filter>
+    <div class="mainScreenContainer">
+        <app-task-grid></app-task-grid>
+    </div>
+</div>
