--- a/task-manager/src/app/views/task-filter/task-filter.component.html
+++ b/task-manager/src/app/views/task-filter/task-filter.component.html
@@ -1,103 +1,122 @@
 <div class="taskFilterWrapper">
-    <div class="alert alert-danger warningAlert taskFilterAlert" *ngIf="filterError">
-        <h2>{{filterError}}</h2>
+    <div class="alert alert-danger warningAlert taskFilterAlert"
+         *ngIf="filterError">
+      <h2>{{filterError}}</h2>
     </div>
-</div>
-
-
-<table>
-    <tr>
+    <table>
+      <tr>
+        <td class="border-top border-left">Completed</td>
+        <td class="border-top border-right">Category</td>
         <td></td>
-        <td>Created After</td>
-        <td>Created Before</td>
+        <td class="border-top border-left">Created After</td>
+        <td class="border-top border-right">Created Before</td>
         <td></td>
-        <td>Scheduled After</td>
-        <td>Scheduled Before</td>
-    </tr>
-    <tr>
-        <td></td>
-        <td>
-            <form class="form-inline">
-                <div class="form-group">
-                    <div class="input-group"> <input class="form-control" placeholder="yyyy-mm-dd" name="createdAfterDP"
-                            ngbDatepicker #createdAfterDP="ngbDatepicker" [(ngModel)]="startDate">
-                        <div class="input-group-append">
-                            <button class="btn btn-outline-secondary calendar" (click)="createdAfterDP.toggle()"
-                                type="button">
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </form>
+        <td class="border-top border-left">Scheduled After</td>
+        <td class="border-top border-right">Scheduled Before</td>
+      </tr>
+      <tr>
+        <td class="border-bottom border-left">
+          <select [(ngModel)]="completed" class="completedDropDown" >
+            <option *ngFor="let task of refDataModel.taskCompletedOptions"
+                    [value]="task.value">
+              {{task.label}}
+            </option>
+          </select>
         </td>
-        <td>
-            <form class="form-inline">
-                <div class="form-group">
-                    <div class="input-group"> <input class="form-control" placeholder="yyyy-mm-dd"
-                            name="createdBeforeDP" ngbDatepicker #createdBeforeDP="ngbDatepicker" [(ngModel)]="endDate">
-                        <div class="input-group-append">
-                            <button class="btn btn-outline-secondary calendar" (click)=" createdBeforeDP.toggle()"
-                                type="button">
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </form>
+        <td class="border-bottom border-right">
+          <select [(ngModel)]="taskFilter.taskCategoryID" class="taskCategoryDropDown">
+            <option *ngFor="let category of taskCategories"
+                    [value]="category.taskCategoryID">
+              {{category.taskCategory}}
+            </option>
+          </select>
         </td>
         <td></td>
-        <td>
-            <form class="form-inline">
-                <div class="form-group">
-                    <div class="input-group"> <input class="form-control" placeholder="yyyy-mm-dd"
-                            name="scheduledAfterDP" ngbDatepicker #scheduledAfterDP="ngbDatepicker"
-                            [(ngModel)]="scheduledStartDate">
-                        <div class="input-group-append">
-                            <button class="btn btn-outline-secondary calendar" (click)=" scheduledAfterDP.toggle()"
-                                type="button">
-                            </button>
-                        </div>
-                    </div>
+        <td class="border-bottom border-left">
+          <form class="form-inline">
+            <div class="form-group">
+              <div class="input-group  datePicker" >
+                <input class="form-control" placeholder="yyyy-mm-dd"
+                       name="createdAfterDP" ngbDatepicker
+                       #createdAfterDP="ngbDatepicker"
+                       [(ngModel)]="startDate">
+                <div class="input-group-append">
+                  <button class="btn btn-outline-secondary calendar"
+                          (click)="createdAfterDP.toggle()" type="button">
+                  </button>
                 </div>
-            </form>
+              </div>
+            </div>
+          </form>
+          <!---
+  <form class="form-inline">
+    <div class="form-group">
+      <div class="input-group">
+        <input class="form-control" placeholder="yyyy-mm-dd"
+               name="dp" ngbDatepicker #d="ngbDatepicker" [(ngModel)]="model"  >
+        <div class="input-group-append">
+          <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+        </div>
+      </div>
+    </div>
+  </form>        --->
         </td>
-        <td>
-            <form class="form-inline">
-                <div class="form-group">
-                    <div class="input-group"> <input class="form-control" placeholder="yyyy-mm-dd"
-                            name="scheduledBeforeDP" ngbDatepicker #scheduledBeforeDP="ngbDatepicker"
-                            [(ngModel)]="scheduledEndDate">
-                        <div class="input-group-append">
-                            <button class="btn btn-outline-secondary calendar" (click)=" scheduledBeforeDP.toggle()"
-                                type="button">
-                            </button>
-                        </div>
-                    </div>
+        <td class="border-bottom border-right">
+          <form class="form-inline">
+            <div class="form-group">
+              <div class="input-group  datePicker" >
+                <input class="form-control" placeholder="yyyy-mm-dd"
+                       name="createdBeforeDP"
+                       ngbDatepicker #createdBeforeDP="ngbDatepicker"
+                       [(ngModel)]="endDate">
+                <div class="input-group-append">
+                  <button class="btn btn-outline-secondary calendar"
+                          (click)=" createdBeforeDP.toggle()" type="button">
+                  </button>
                 </div>
-            </form>
+              </div>
+            </div>
+          </form>
         </td>
-    </tr>
-
-    <tr>
-        <td>Completed</td>
-        <td>Category</td>
-    </tr>
-
-    <tr>
-        <td>
-            <select [(ngModel)]="completed">
-                <option *ngFor="let task of refDataModel.taskCompletedOptions" [value]="task.value">
-                    {{task.label}}
-                </option>
-            </select>
+        <td></td>
+        <td class="border-bottom border-left">
+          <form class="form-inline">
+            <div class="form-group">
+              <div class="input-group datePicker" >
+                <input class="form-control" placeholder="yyyy-mm-dd"
+                       name="scheduledAfterDP"
+                       ngbDatepicker #scheduledAfterDP="ngbDatepicker"
+                       [(ngModel)]="scheduledStartDate">
+                <div class="input-group-append">
+                  <button class="btn btn-outline-secondary calendar"
+                          (click)=" scheduledAfterDP.toggle()" type="button">
+                  </button>
+                </div>
+              </div>
+            </div>
+          </form>
         </td>
-
-        <td>
-            <select [(ngModel)]="taskFilter.taskCategoryID">
-                <option *ngFor="let category of taskCategories" [value]="category.taskCategoryID">
-                    {{category.taskCategory}}
-                </option>
-            </select>
+        <td class="border-bottom border-right">
+          <form class="form-inline">
+            <div class="form-group">
+              <div class="input-group datePicker" >
+                <input class="form-control" placeholder="yyyy-mm-dd"
+                       name="scheduledBeforeDP"
+                       ngbDatepicker #scheduledBeforeDP="ngbDatepicker"
+                       [(ngModel)]="scheduledEndDate">
+                <div class="input-group-append">
+                  <button class="btn btn-outline-secondary calendar"
+                          (click)=" scheduledBeforeDP.toggle()" type="button">
+                  </button>
+                </div>
+              </div>
+            </div>
+          </form>
         </td>
-    </tr>
-
-</table>
+        <td class="alignBottom">
+          <input type="button" value="Filter" (click)="filter()" />
+        </td>
+      </tr>
+    </table>
+  
+  </div>
