Izi pizi.... viewsi narejeni, treba se backend mal popilt pa dokončat....

--- a/spica-final-1/src/app/app.component.html
+++ b/spica-final-1/src/app/app.component.html
@@ -341,8 +341,13 @@
   </div>
 
 
+  <nav>
+    <a routerLink="/settings">Settings</a> | 
+    <a routerLink="/users">Users</a> | 
+    <a routerLink="/presence">Presence</a>
+  </nav>
+  
 
-FIXME: app.component.html Line 345
 
 
 
