--- a/spica-final-1/src/app/views/users/users.component.html
+++ b/spica-final-1/src/app/views/users/users.component.html
@@ -1,1 +1,12 @@
-<p>users works!</p>
+<jqxGrid 
+[selectionmode]="'checkbox'" 
+[source]="source" 
+[theme]="'material'" 
+[autoheight]="true" 
+[pageable]="true" 
+[altrows]="true" 
+[filterable]="true" 
+[sortable]="true" 
+[columns]="columns" 
+#grid>
+</jqxGrid>  
