--- a/spica-final-1/src/app/app.component.html
+++ b/spica-final-1/src/app/app.component.html
@@ -339,37 +339,10 @@
       <path id="Path_40" data-name="Path 40" d="M644.6,141S143.02,215.537,147.049,870.207s342.774,201.755,342.774,201.755S404.659,847.213,388.815,762.2c-27.116-145.51-11.551-384.124,271.9-609.1C671.15,139.365,644.6,141,644.6,141Z" transform="translate(-147.025 -140.939)" fill="#f5f5f5"/>
     </svg>
   </div>
-<!--
-  <nav>
-    <a routerLink="/settings">Settings</a> | 
-    <a routerLink="/users">Users</a> | 
-    <a routerLink="/presence">Presence</a>
-  </nav>
-
-<jqxGrid
-    [width]="getWidth()" [source]="source" [columns]="columns"
-    [pageable]="true" [autoheight]="true" [sortable]="true" 
-    [altrows]="true"  [enabletooltips]="true"  [editable]="true" 
-    [selectionmode]="'multiplecellsadvanced'" [columngroups]="columngroups">
-</jqxGrid>
-
-<jqxGrid [width]="850" [source]="dataAdapter" [columns]="columns"
-         [pageable]="true" [autoheight]="true" [sortable]="true"
-         [altrows]="true" [enabletooltips]="true" [editable]="true"
-         [selectionmode]="'multiplecellsadvanced'" [columngroups]="columngroups">
-</jqxGrid>
--->
-<jqxGrid #myGrid [width]="1050" [source]="dataAdapter" [columns]="columns" [sortable]="true"> </jqxGrid>
-
-<!--
-<jqxGrid #myGrid [theme]="'material'" [width]="'100%'" [source]="dataAdapter"
-         [autoheight]="true" [columns]="columns" [sortable]="true"
-         [filterable]="true" [autoshowfiltericon]="true" [ready]="ready">
-</jqxGrid>
--->
-
- </div>
 
 
+  <jqxGrid #myGrid [width]="1050" [source]="dataAdapter" [columns]="columns" [sortable]="true" [filterable]="true" [autoshowfiltericon]="true" [pageable]="true"> </jqxGrid>
+
+</div>
 
 <router-outlet></router-outlet>
