--- a/spica-final-1/src/app/app.component.html
+++ b/spica-final-1/src/app/app.component.html
@@ -310,7 +310,7 @@
       alt="Kornet ne Špica"
       src="../assets/LogoTimeAndSpace4web.png"/>
 
-  <span>Welcome</span>
+  <span>by Jernej</span>
     <div class="spacer"></div>
     <a aria-label="Angular on twitter" target="_blank" rel="noopener" href="https://twitter.com/angular" title="Twitter">
       <svg id="twitter-logo" height="24" data-name="Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
