Moving content to different components

--- a/spica-final-1/src/app/app.component.html
+++ b/spica-final-1/src/app/app.component.html
@@ -300,10 +300,9 @@
     border-radius: 5px;
   }
 
-  .example-container .mat-form-field + .mat-form-field {
+  .example-container .mat-form-field+.mat-form-field {
     margin-left: 8px;
   }
-
 </style>
 
 <!-- Toolbar -->
@@ -361,12 +360,12 @@
 
     <span>{{ title }} app is running!
 
-    <nav>
-      <a style="color:brown;" routerLink="/settings">Settings</a> | 
-      <a style="color:brown;" routerLink="/users">Users</a> | 
-      <a style="color:brown;" routerLink="/prisotnost">Presence</a>
-    </nav>
-  </span>
+      <nav>
+        <a style="color:brown;" routerLink="/settings">Settings</a> |
+        <a style="color:brown;" routerLink="/users">Users</a> |
+        <a style="color:brown;" routerLink="/prisotnost">Presence</a>
+      </nav>
+    </span>
 
     <svg id="rocket-smoke" xmlns="http://www.w3.org/2000/svg" width="516.119" height="1083.632"
       viewBox="0 0 516.119 1083.632">
@@ -377,46 +376,45 @@
     </svg>
   </div>
 
-  <br />
+  <router-outlet></router-outlet>
 
-  <jqxGrid #myGrid [width]="830" [source]="dataAdapter" [columns]="columns" [sortable]="true" [filterable]="true"
-    [autoshowfiltericon]="true" [pageable]="true"> </jqxGrid>
+  <div id="viewcontent1" name="viewcontent1">
+    <br />
 
-  <div class="example-container" style="background-color:#888;">
+    <jqxGrid #myGrid [width]="830" [source]="dataAdapter" [columns]="columns" [sortable]="true" [filterable]="true"
+      [autoshowfiltericon]="true" [pageable]="true"> </jqxGrid>
 
-    <p>
-      <mat-form-field hintLabel="Max 10 znakov" appearance="fill">
-        <mat-label>Vnesite Ime</mat-label>
-        <input matInput #input_ime id="input_ime" name="input_ime" maxlength="10" placeholder="Npr. Jernej valda" (change)="onInputImeChanged()">
-        <mat-hint align="end">{{input_ime.value?.length || 0}}/10</mat-hint>
-      </mat-form-field>
-      
-      <mat-form-field hintLabel="Max 10 znakov" appearance="fill">
-        <mat-label>Vnesite Priimek</mat-label>
-        <input matInput #input_priimek maxlength="10" placeholder="Npr. Korošec">
-        <mat-hint align="end">{{input_priimek.value?.length || 0}}/10</mat-hint>
-      </mat-form-field>
+    <div class="example-container" style="background-color:#888;">
 
-      <mat-form-field hintLabel="Max 50 znakov" appearance="fill">
-        <mat-label>Vnesite Email</mat-label>
-        <input matInput #input_email maxlength="50" placeholder="Npr. Jernej.Korosec@lejtojeiziResIzi.si">
-        <mat-hint align="end">{{input_email.value?.length || 0}}/50</mat-hint>
-      </mat-form-field>
+      <p>
+        <mat-form-field hintLabel="Max 10 znakov" appearance="fill">
+          <mat-label>Vnesite Ime</mat-label>
+          <input matInput #input_ime id="input_ime" name="input_ime" maxlength="10" placeholder="Npr. Jernej valda"
+            (change)="onInputImeChanged()">
+          <mat-hint align="end">{{input_ime.value?.length || 0}}/10</mat-hint>
+        </mat-form-field>
 
-      <mat-form-field hintLabel="Max 10 znakov" appearance="fill">
-        <mat-label>Vnesite Matično</mat-label>
-        <input matInput #input_maticna maxlength="10" placeholder="Npr. SI66609990">
-        <mat-hint align="end">{{input_maticna.value?.length || 0}}/10</mat-hint>
-      </mat-form-field>
-    <p>
-      <button mat-stroked-button color="primary" #button_poslji id="button_poslji" name="button_poslji" (click)="onAddNewEmployee()">Dodaj novega zaposlenega</button>
-    </p>
+        <mat-form-field hintLabel="Max 10 znakov" appearance="fill">
+          <mat-label>Vnesite Priimek</mat-label>
+          <input matInput #input_priimek maxlength="10" placeholder="Npr. Korošec">
+          <mat-hint align="end">{{input_priimek.value?.length || 0}}/10</mat-hint>
+        </mat-form-field>
+
+        <mat-form-field hintLabel="Max 50 znakov" appearance="fill">
+          <mat-label>Vnesite Email</mat-label>
+          <input matInput #input_email maxlength="50" placeholder="Npr. Jernej.Korosec@lejtojeiziResIzi.si">
+          <mat-hint align="end">{{input_email.value?.length || 0}}/50</mat-hint>
+        </mat-form-field>
+
+        <mat-form-field hintLabel="Max 10 znakov" appearance="fill">
+          <mat-label>Vnesite Matično</mat-label>
+          <input matInput #input_maticna maxlength="10" placeholder="Npr. SI66609990">
+          <mat-hint align="end">{{input_maticna.value?.length || 0}}/10</mat-hint>
+        </mat-form-field>
+      <p>
+        <button mat-stroked-button color="primary" #button_poslji id="button_poslji" name="button_poslji"
+          (click)="onAddNewEmployee()">Dodaj novega zaposlenega</button>
+      </p>
+    </div>
   </div>
-
 </div>
-
-
-
-
-
-<router-outlet></router-outlet>
