--- a/spica-final-1/src/app/views/presence/presence.component.html
+++ b/spica-final-1/src/app/views/presence/presence.component.html
@@ -12,7 +12,7 @@
         <p>
             <button mat-stroked-button color="primary" #button_refresh_presence id="button_refresh_presence"
                 name="button_refresh_presence" (click)="onPresenceRefresh()">
-                Dodaj novega zaposlenega</button>
+                Osveži trenutno prisotne (Odpri okno)</button>
         </p>
     </div>
 </div>
